--- a/offers.html
+++ b/offers.html
@@ -86,15 +86,45 @@
         color: #aaa;
       }
 
-      /* ✅ Preview styling */
-      .image-preview {
-        width: 150px;
-        height: 150px;
-        border-radius: 10px;
-        object-fit: cover;
-        display: none;
+      /* ✅ Preview styling for multiple images */
+      .images-preview-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
         margin-top: 10px;
+      }
+
+      .image-preview-item {
+        position: relative;
+        width: 120px;
+        height: 120px;
+      }
+
+      .image-preview {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+        object-fit: cover;
         border: 2px solid #ccc;
+      }
+
+      .remove-image-btn {
+        position: absolute;
+        top: -8px;
+        right: -8px;
+        background: #ff4444;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        font-size: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;
       }
 
       /* ✅ Debug info box */
@@ -141,6 +171,23 @@
         to {
           transform: rotate(360deg);
         }
+      }
+
+      .progress-info {
+        background: #e0e7ff;
+        border: 1px solid #7c3aed;
+        border-radius: 8px;
+        padding: 12px;
+        margin-top: 10px;
+        font-weight: 600;
+        color: #7c3aed;
+        text-align: center;
+        display: none;
+      }
+
+      body.dark .progress-info {
+        background: #2a2a4a;
+        color: #a855f7;
       }
     </style>
   </head>
@@ -221,12 +268,20 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
-            <label>اختيار صورة العرض (اختياري)</label>
-            <input type="file" id="offerImage" accept="image/*" />
-            <img id="imagePreview" class="image-preview" alt="معاينة الصورة" />
+            <label
+              >اختيار صور العرض (اختياري - يمكنك اختيار أكثر من صورة)</label
+            >
+            <input type="file" id="offerImage" accept="image/*" multiple />
+
+            <div
+              id="imagesPreviewContainer"
+              class="images-preview-container"
+            ></div>
 
             <label>تاريخ انتهاء العرض</label>
             <input type="date" id="offerDate" />
+
+            <div class="progress-info" id="progressInfo"></div>
 
             <button id="sendBtn" onclick="sendOffer()">إرسال العرض الآن</button>
 
@@ -250,6 +305,8 @@
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+      let selectedFiles = [];
+
       // 🔍 Debug helper
       function addDebugLog(message, type = "info") {
         const debugContent = document.getElementById("debugContent");
@@ -262,6 +319,12 @@
         debugContent.innerHTML += `<div>[${timestamp}] ${icon} ${message}</div>`;
         debugContent.scrollTop = debugContent.scrollHeight;
         console.log(`[${timestamp}] ${message}`);
+      }
+
+      function updateProgress(message) {
+        const progressInfo = document.getElementById("progressInfo");
+        progressInfo.style.display = "block";
+        progressInfo.textContent = message;
       }
 
       // 🔐 Login logic
@@ -315,116 +378,93 @@
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
-      // 🖼️ Preview image before upload
+      // 🖼️ Preview multiple images
       const offerImage = document.getElementById("offerImage");
-      const imagePreview = document.getElementById("imagePreview");
+      const imagesPreviewContainer = document.getElementById(
+        "imagesPreviewContainer"
+      );
+
       offerImage.addEventListener("change", () => {
-        const file = offerImage.files[0];
-        if (file) {
-          addDebugLog(
-            `تم اختيار صورة: ${file.name} (${(file.size / 1024).toFixed(2)} KB)`
-          );
-          const reader = new FileReader();
-          reader.onload = (e) => {
-            imagePreview.src = e.target.result;
-            imagePreview.style.display = "block";
-          };
-          reader.readAsDataURL(file);
-        } else {
-          imagePreview.style.display = "none";
-        }
+        selectedFiles = Array.from(offerImage.files);
+        renderImagePreviews();
+        addDebugLog(`تم اختيار ${selectedFiles.length} صورة`);
       });
 
-      // 🚀 Send offer
-      async function sendOffer() {
-        const sendBtn = document.getElementById("sendBtn");
-        const title = document.getElementById("offerTitle").value.trim();
-        const desc = document.getElementById("offerDesc").value.trim();
-        const date = document.getElementById("offerDate").value;
-        const file = offerImage.files[0];
+      function renderImagePreviews() {
+        imagesPreviewContainer.innerHTML = "";
 
-        // Clear previous debug logs
-        document.getElementById("debugContent").innerHTML = "";
-        document.getElementById("debugInfo").style.display = "block";
+        selectedFiles.forEach((file, index) => {
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            const div = document.createElement("div");
+            div.className = "image-preview-item";
+            div.innerHTML = `
+              <img src="${e.target.result}" class="image-preview" alt="صورة ${
+              index + 1
+            }">
+              <button class="remove-image-btn" onclick="removeImage(${index})">×</button>
+            `;
+            imagesPreviewContainer.appendChild(div);
+          };
+          reader.readAsDataURL(file);
+        });
+      }
 
-        if (!title || !desc || !date) {
-          alert("⚠️ يرجى تعبئة جميع الحقول قبل الإرسال.");
-          addDebugLog("فشل: حقول مفقودة", "error");
-          return;
-        }
+      function removeImage(index) {
+        selectedFiles.splice(index, 1);
+        renderImagePreviews();
+        addDebugLog(`تم إزالة صورة. المتبقي: ${selectedFiles.length} صورة`);
+      }
 
-        // Disable button during send
-        sendBtn.disabled = true;
-        sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
-
-        let imageUrl = null;
-
-        if (file) {
-          try {
-            addDebugLog(`بدء رفع الصورة: ${file.name}`);
-
-            const uniqueName = `${Date.now()}_${file.name}`;
-            const { data, error } = await supabase.storage
-              .from("offers")
-              .upload(uniqueName, file, {
-                cacheControl: "3600",
-                upsert: false,
-              });
-
-            if (error) {
-              addDebugLog(`خطأ في رفع الصورة: ${error.message}`, "error");
-              throw error;
-            }
-
-            const { data: urlData } = supabase.storage
-              .from("offers")
-              .getPublicUrl(uniqueName);
-
-            imageUrl = urlData.publicUrl;
-            addDebugLog(`✅ تم رفع الصورة بنجاح`, "success");
-            addDebugLog(`رابط الصورة: ${imageUrl}`);
-
-            // ⚠️ Test if image URL is accessible
-            try {
-              const testResponse = await fetch(imageUrl, { method: "HEAD" });
-              if (testResponse.ok) {
-                addDebugLog(`✅ الصورة متاحة للوصول العام`, "success");
-              } else {
-                addDebugLog(
-                  `⚠️ الصورة غير متاحة (كود: ${testResponse.status})`,
-                  "error"
-                );
-                addDebugLog(
-                  `تأكد من أن bucket "offers" عام في إعدادات Supabase`,
-                  "error"
-                );
-              }
-            } catch (e) {
-              addDebugLog(`⚠️ لم يتم التحقق من إمكانية الوصول للصورة`, "error");
-            }
-          } catch (err) {
-            console.error("❌ Image upload error:", err);
-            addDebugLog(`خطأ في رفع الصورة: ${err.message}`, "error");
-            alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
-            imageUrl = null;
-          }
-        } else {
-          addDebugLog("لم يتم اختيار صورة - سيتم الإرسال بدون صورة");
-        }
-
+      // 🚀 Upload single image to Supabase
+      async function uploadImage(file) {
         try {
-          const phone = "962785050875"; // ✅ Replace with recipient phone number
+          addDebugLog(`بدء رفع الصورة: ${file.name}`);
 
+          const uniqueName = `${Date.now()}_${Math.random()
+            .toString(36)
+            .substr(2, 9)}_${file.name}`;
+          const { data, error } = await supabase.storage
+            .from("offers")
+            .upload(uniqueName, file, {
+              cacheControl: "3600",
+              upsert: false,
+            });
+
+          if (error) {
+            addDebugLog(`خطأ في رفع الصورة: ${error.message}`, "error");
+            throw error;
+          }
+
+          const { data: urlData } = supabase.storage
+            .from("offers")
+            .getPublicUrl(uniqueName);
+
+          const imageUrl = urlData.publicUrl;
+          addDebugLog(`✅ تم رفع الصورة بنجاح: ${file.name}`, "success");
+
+          return imageUrl;
+        } catch (err) {
+          addDebugLog(
+            `خطأ في رفع الصورة ${file.name}: ${err.message}`,
+            "error"
+          );
+          return null;
+        }
+      }
+
+      // 📤 Send single message with image
+      async function sendWhatsAppMessage(phone, messageText, imageUrl, isLast) {
+        try {
           const payload = {
             name: "Smile Clinic",
             phone: phone,
-            service: title,
-            appointment: `${desc}\n⏰ صالح حتى: ${date}`,
+            service: document.getElementById("offerTitle").value.trim(),
+            appointment: messageText,
             image: imageUrl,
           };
 
-          addDebugLog("إرسال الطلب إلى WhatsApp API...");
-          addDebugLog(`البيانات: ${JSON.stringify(payload, null, 2)}`);
+          addDebugLog(`إرسال رسالة مع صورة...`);
 
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
@@ -436,30 +476,116 @@
           );
 
           const data = await res.json();
-          addDebugLog(`استجابة API: ${JSON.stringify(data, null, 2)}`);
 
           if (data.success) {
-            if (data.fallback) {
-              addDebugLog("⚠️ تم الإرسال بنجاح لكن بدون صورة", "error");
-              alert("⚠️ تم إرسال العرض بنجاح (نص فقط - فشل إرسال الصورة)");
-            } else {
-              addDebugLog("✅ تم إرسال العرض بنجاح مع الصورة!", "success");
-              alert("✅ تم إرسال العرض بنجاح!");
+            addDebugLog(`✅ تم إرسال رسالة بنجاح`, "success");
+            return true;
+          } else {
+            addDebugLog(`فشل إرسال رسالة: ${JSON.stringify(data)}`, "error");
+            return false;
+          }
+        } catch (err) {
+          addDebugLog(`خطأ في إرسال الرسالة: ${err.message}`, "error");
+          return false;
+        }
+      }
+
+      // 🚀 Main send offer function
+      async function sendOffer() {
+        const sendBtn = document.getElementById("sendBtn");
+        const title = document.getElementById("offerTitle").value.trim();
+        const desc = document.getElementById("offerDesc").value.trim();
+        const date = document.getElementById("offerDate").value;
+
+        // Clear previous debug logs
+        document.getElementById("debugContent").innerHTML = "";
+        document.getElementById("debugInfo").style.display = "block";
+        document.getElementById("progressInfo").style.display = "none";
+
+        if (!title || !desc || !date) {
+          alert("⚠️ يرجى تعبئة جميع الحقول قبل الإرسال.");
+          addDebugLog("فشل: حقول مفقودة", "error");
+          return;
+        }
+
+        // Disable button during send
+        sendBtn.disabled = true;
+        sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
+
+        const phone = "962785050875"; // ✅ Replace with recipient phone number
+        const messageText = `${desc}\n⏰ صالح حتى: ${date}`;
+
+        try {
+          if (selectedFiles.length === 0) {
+            // No images - send text only
+            addDebugLog("لا توجد صور - سيتم إرسال نص فقط");
+            updateProgress("إرسال رسالة نصية...");
+
+            await sendWhatsAppMessage(phone, messageText, null, true);
+
+            alert("✅ تم إرسال العرض بنجاح!");
+            clearForm();
+          } else {
+            // Upload and send multiple images
+            addDebugLog(`بدء رفع وإرسال ${selectedFiles.length} صورة`);
+
+            let successCount = 0;
+            let failCount = 0;
+
+            for (let i = 0; i < selectedFiles.length; i++) {
+              const file = selectedFiles[i];
+              updateProgress(
+                `جاري رفع الصورة ${i + 1} من ${selectedFiles.length}...`
+              );
+
+              // Upload image
+              const imageUrl = await uploadImage(file);
+
+              if (imageUrl) {
+                // Wait 2 seconds between messages to avoid rate limiting
+                if (i > 0) {
+                  updateProgress(`انتظار قبل إرسال الصورة ${i + 1}...`);
+                  await new Promise((resolve) => setTimeout(resolve, 2000));
+                }
+
+                updateProgress(
+                  `إرسال الصورة ${i + 1} من ${selectedFiles.length}...`
+                );
+
+                // Send message with image
+                const isLast = i === selectedFiles.length - 1;
+                const success = await sendWhatsAppMessage(
+                  phone,
+                  messageText,
+                  imageUrl,
+                  isLast
+                );
+
+                if (success) {
+                  successCount++;
+                } else {
+                  failCount++;
+                }
+              } else {
+                failCount++;
+              }
             }
 
-            // Clear form
-            document.getElementById("offerTitle").value = "";
-            document.getElementById("offerDesc").value = "";
-            document.getElementById("offerDate").value = "";
-            document.getElementById("offerImage").value = "";
-            imagePreview.style.display = "none";
-          } else {
-            console.error("❌ Send failed:", data);
-            addDebugLog(`فشل الإرسال: ${JSON.stringify(data)}`, "error");
-            alert(
-              "⚠️ فشل إرسال العرض: " +
-                (data.error?.message || data.message || "خطأ غير معروف")
+            addDebugLog(
+              `✅ اكتمل الإرسال: ${successCount} نجح، ${failCount} فشل`,
+              "success"
             );
+
+            if (successCount > 0) {
+              alert(
+                `✅ تم إرسال ${successCount} صورة بنجاح!${
+                  failCount > 0 ? `\n⚠️ فشل إرسال ${failCount} صورة` : ""
+                }`
+              );
+              clearForm();
+            } else {
+              alert("❌ فشل إرسال جميع الصور");
+            }
           }
         } catch (err) {
           console.error("❌ Error sending offer:", err);
@@ -469,7 +595,17 @@
           // Re-enable button
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
+          document.getElementById("progressInfo").style.display = "none";
         }
+      }
+
+      function clearForm() {
+        document.getElementById("offerTitle").value = "";
+        document.getElementById("offerDesc").value = "";
+        document.getElementById("offerDate").value = "";
+        document.getElementById("offerImage").value = "";
+        selectedFiles = [];
+        imagesPreviewContainer.innerHTML = "";
       }
 
       // 📱 Menu toggle for mobile
