--- a/dashboard.html
+++ b/dashboard.html
@@ -95,6 +95,13 @@
             جدول التواصل
           </a>
 
+          <!-- ✅ NEW MENU ITEM ADDED HERE -->
+          <a href="contactlist.html">
+            <i class="fa-solid fa-address-book"></i>
+            قائمة التواصل
+          </a>
+          <!-- ✅ END NEW ITEM -->
+
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
             إعدادات الذكاء الاصطناعي
