--- a/contactlist.html
+++ b/contactlist.html
@@ -71,6 +71,26 @@
         margin-top: 10px;
         display: none;
       }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 10px;
+        text-align: center;
+      }
+
+      th {
+        background: #f4f4f4;
+      }
+
+      body.dark th {
+        background: #222;
+      }
     </style>
   </head>
 
