--- a/booking.html
+++ b/booking.html
@@ -33,12 +33,13 @@
         border-radius: 5px;
         border: 1px solid #ccc;
         background: #fff;
+        color: #222;
         cursor: pointer;
       }
 
       body.dark select {
         background: #333;
-        color: #fff;
+        color: #f1f1f1;
         border-color: #555;
       }
 
@@ -82,12 +83,15 @@
         display: none;
         max-height: 250px;
         overflow-y: auto;
+        color: #222;
       }
+
       body.dark .debug-info {
         background: #1a1a1a;
-        color: #0f0;
+        color: #00ff00;
         border-color: #333;
       }
+
       .debug-info h4 {
         color: #7c3aed;
         margin-top: 0;
@@ -106,6 +110,7 @@
         align-items: center;
         z-index: 9999;
       }
+
       .modal-content {
         background: #fff;
         padding: 20px;
@@ -113,15 +118,36 @@
         width: 400px;
         max-height: 70vh;
         overflow-y: auto;
+        color: #222; /* readable on white */
       }
+
       .modal-content h3 {
         color: #7c3aed;
         text-align: center;
         margin-top: 0;
       }
+
+      /* ✅ Dark mode fixes */
       body.dark .modal-content {
         background: #222;
-        color: #fff;
+        color: #e5e7eb; /* light gray text for readability */
+      }
+
+      body.dark .modal-content h3 {
+        color: #b48cf0; /* soft purple to match dark theme */
+      }
+
+      /* ✅ Table + general dark text fix */
+      body.dark table,
+      body.dark th,
+      body.dark td {
+        color: #d1d5db; /* balanced light gray text */
+        border-color: #333;
+      }
+
+      body.dark .table-card {
+        background: #252535;
+        color: #d1d5db;
       }
     </style>
   </head>
