--- a/analytics.html
+++ b/analytics.html
@@ -31,7 +31,7 @@
             لوحة القيادة
           </a>
 
-          <a href="notifications.html">
+          <a href="notifications.html" id="notificationLink">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
@@ -40,11 +40,17 @@
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
-
           <a href="booking.html">
             <i class="fa-solid fa-table"></i>
             جدول التواصل
           </a>
+
+          <!-- ✅ NEW MENU ITEM ADDED HERE -->
+          <a href="contactlist.html">
+            <i class="fa-solid fa-address-book"></i>
+            قائمة التواصل
+          </a>
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
