--- a/booking.html
+++ b/booking.html
@@ -155,26 +155,45 @@
   <body>
     <div class="container">
       <aside class="sidebar" id="sidebar">
-        <div class="logo"><span>CONAN DASHBOARD</span></div>
+        <div class="logo">
+          <span>CONAN DASHBOARD</span>
+        </div>
         <nav class="menu">
-          <a href="dashboard.html"
-            ><i class="fa-solid fa-gauge"></i> لوحة القيادة</a
-          >
-          <a href="notifications.html"
-            ><i class="fa-solid fa-bell"></i> التنبيهات</a
-          >
-          <a href="analytics.html"
-            ><i class="fa-solid fa-rocket"></i> تحليلات</a
-          >
-          <a href="booking.html" class="active"
-            ><i class="fa-solid fa-table"></i> جدول الحجوزات</a
-          >
-          <a href="AIsettings.html"
-            ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
-          >
-          <a href="offers.html"
-            ><i class="fa-solid fa-gift"></i> الحملات الاعلانية</a
-          >
+          <a href="dashboard.html">
+            <i class="fa-solid fa-gauge"></i>
+            لوحة القيادة
+          </a>
+
+          <a href="notifications.html" id="notificationLink">
+            <i class="fa-solid fa-bell"></i>
+            التنبيهات
+          </a>
+
+          <a href="analytics.html">
+            <i class="fa-solid fa-rocket"></i>
+            تحليلات
+          </a>
+          <a href="booking.html" class="active">
+            <i class="fa-solid fa-table"></i>
+            جدول التواصل
+          </a>
+
+          <!-- ✅ NEW MENU ITEM ADDED HERE -->
+          <a href="contactlist.html">
+            <i class="fa-solid fa-address-book"></i>
+            قائمة التواصل
+          </a>
+          <!-- ✅ END NEW ITEM -->
+
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
+          </a>
+
+          <a href="offers.html">
+            <i class="fa-solid fa-gift"></i>
+            الحملات الاعلانية
+          </a>
         </nav>
       </aside>
 
