--- a/notifications.html
+++ b/notifications.html
@@ -224,10 +224,12 @@
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
-          <a href="notifications.html" class="active">
+
+          <a href="notifications.html" id="notificationLink" class="active">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
+
           <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
@@ -236,10 +238,19 @@
             <i class="fa-solid fa-table"></i>
             جدول التواصل
           </a>
+
+          <!-- ✅ NEW MENU ITEM ADDED HERE -->
+          <a href="contactlist.html">
+            <i class="fa-solid fa-address-book"></i>
+            قائمة التواصل
+          </a>
+          <!-- ✅ END NEW ITEM -->
+
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
             إعدادات الذكاء الاصطناعي
           </a>
+
           <a href="offers.html">
             <i class="fa-solid fa-gift"></i>
             الحملات الاعلانية
